--- a/ir/src/main/res/layout/activity_ir.xml
+++ b/ir/src/main/res/layout/activity_ir.xml
@@ -217,10 +217,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/spinner2"
         android:entries="@array/item_arrays"
-        android:layout_alignTop="@+id/spinner"
         android:layout_toRightOf="@+id/button6"
         android:layout_alignRight="@+id/button15"
-        android:layout_alignEnd="@+id/button15" />
+        android:layout_alignEnd="@+id/button15"
+        android:layout_alignTop="@+id/spinner"
+        android:layout_alignBottom="@+id/spinner" />
 
     <Button
         android:layout_width="wrap_content"
