--- a/ir/src/main/res/menu/ir.xml
+++ b/ir/src/main/res/menu/ir.xml
@@ -4,6 +4,11 @@
     
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
+        android:orderInCategory="99"
+        android:showAsAction="never" />
+
+    <item android:id="@+id/action_about"
+        android:title="@string/about"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
