--- a/ir/src/main/res/values/ids.xml
+++ b/ir/src/main/res/values/ids.xml
@@ -29,4 +29,5 @@
     <item type="id" name="editText">false</item>
     <item type="id" name="editText2">false</item>
     <item type="id" name="action_settings">false</item>
+    <item type="id" name="action_about">false</item>
 </resources>
