--- a/ir/src/main/res/layout-xlarge/activity_ir.xml
+++ b/ir/src/main/res/layout-xlarge/activity_ir.xml
@@ -71,7 +71,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/una"
+        android:text="@string/one"
         android:id="@+id/button7"
         android:onClick="on1Click"
         android:layout_alignTop="@+id/button"
@@ -81,7 +81,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dos"
+        android:text="@string/two"
         android:id="@+id/button8"
         android:onClick="on2Click"
         android:layout_alignTop="@+id/button7"
@@ -91,7 +91,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tres"
+        android:text="@string/tree"
         android:id="@+id/button9"
         android:onClick="on3Click"
         android:layout_above="@+id/button12"
@@ -102,7 +102,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cuatro"
+        android:text="@string/four"
         android:id="@+id/button10"
         android:onClick="on4Click"
         android:layout_below="@+id/button7"
@@ -113,7 +113,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cinco"
+        android:text="@string/five"
         android:id="@+id/button11"
         android:onClick="on5Click"
         android:layout_above="@+id/button6"
@@ -123,7 +123,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/seis"
+        android:text="@string/six"
         android:id="@+id/button12"
         android:onClick="on6Click"
         android:layout_above="@+id/button6"
@@ -133,7 +133,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/siete"
+        android:text="@string/seven"
         android:id="@+id/button13"
         android:onClick="on7Click"
         android:layout_alignTop="@+id/button6"
@@ -143,7 +143,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ocho"
+        android:text="@string/eight"
         android:id="@+id/button14"
         android:onClick="on8Click"
         android:layout_alignTop="@+id/button13"
@@ -153,7 +153,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nueve"
+        android:text="@string/nine"
         android:id="@+id/button15"
         android:onClick="on9Click"
         android:layout_alignTop="@+id/button14"
@@ -163,7 +163,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/cero"
+        android:text="@string/zero"
         android:id="@+id/button16"
         android:onClick="on0Click"
         android:layout_below="@+id/button14"
@@ -231,7 +231,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
-        android:entries="@array/brand_arrays"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
@@ -241,7 +240,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner2"
-        android:entries="@array/item_arrays"
         android:layout_alignParentBottom="true"
         android:layout_toRightOf="@+id/button16"
         android:layout_toLeftOf="@+id/spinner" />
