--- a/ir/src/main/res/layout-xlarge/settings_ir.xml
+++ b/ir/src/main/res/layout-xlarge/settings_ir.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView android:textAppearance="?android:textAppearanceSmall"
+<RelativeLayout
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
+        android:textAppearance="?android:textAppearanceSmall"
         android:id="@id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_brnd"
-        android:textSize="20dp" />
+        android:text="@string/add_brnd" />
 
     <TextView
         android:textAppearance="?android:textAppearanceLarge"
@@ -27,6 +34,7 @@
         android:layout_alignRight="@id/textView2"
         android:layout_alignBottom="@id/editText"
         android:layout_alignEnd="@id/textView2" />
+
     <Button
         android:id="@id/button"
         android:layout_width="wrap_content"
@@ -36,9 +44,10 @@
         android:layout_alignBottom="@id/editText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@id/textView"
-        android:textSize="25dp" />
-    <EditText android:id="@id/editText"
+        android:layout_below="@id/textView" />
+
+    <EditText
+        android:id="@id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/editText2"
@@ -46,6 +55,7 @@
         android:layout_alignStart="@id/editText2"
         android:layout_below="@id/editText2"
         android:layout_toLeftOf="@id/button" />
+
     <EditText
         android:id="@id/editText2"
         android:layout_width="wrap_content"
@@ -72,8 +82,7 @@
         android:id="@+id/textView5"
         android:layout_above="@+id/textView4"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="20dp" />
+        android:layout_alignParentStart="true" />
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -84,41 +93,33 @@
         android:layout_alignTop="@+id/textView4">
 
 
-        <Spinner
-            android:layout_width="169dp"
-            android:layout_height="70dp"
-            android:id="@+id/spinner2"
-            android:layout_gravity="left|bottom" />
-
-        <Spinner
-            android:layout_width="216dp"
-            android:layout_height="70dp"
-            android:id="@+id/spinner"
-            android:layout_gravity="center_horizontal|bottom" />
-
         <Button
-            android:layout_width="171dp"
-            android:layout_height="73dp"
+            android:layout_width="106dp"
+            android:layout_height="65dp"
             android:text="@string/remove"
             android:id="@+id/button2"
             android:layout_gravity="right|bottom"
-            android:onClick="onRemoveClick"
-            android:textSize="25dp" />
+            android:onClick="onRemoveClick" />
 
         <Button
-            android:layout_width="171dp"
-            android:layout_height="73dp"
+            android:layout_width="106dp"
+            android:layout_height="65dp"
             android:text="@string/download"
             android:id="@+id/button3"
             android:onClick="onDownItemsClick"
-            android:layout_gravity="right|top"
-            android:textSize="25dp" />
+            android:layout_gravity="right|top" />
 
         <Spinner
             android:layout_width="461dp"
-            android:layout_height="70dp"
+            android:layout_height="65dp"
             android:id="@+id/spinner6"
             android:layout_gravity="left|top" />
+
+        <Spinner
+            android:layout_width="461dp"
+            android:layout_height="65dp"
+            android:id="@+id/spinner"
+            android:layout_gravity="left|bottom" />
 
 
     </FrameLayout>
