--- a/ir/src/main/res/layout/activity_ir.xml
+++ b/ir/src/main/res/layout/activity_ir.xml
@@ -8,265 +8,271 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.sssemil.sonyirremote.ir.ir">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/pwr_btn"
-        android:id="@+id/button"
-        android:longClickable="false"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/button5"
-        android:layout_alignEnd="@+id/button5"
-        android:onClick="onPowerClick" />
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ChanelPl"
-        android:id="@+id/button3"
-        android:layout_below="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onChanelPlClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ChanelMn"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/button3"
-        android:layout_alignEnd="@+id/button3"
-        android:onClick="onChanelMnSonClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/VolPl"
-        android:id="@+id/button5"
-        android:layout_above="@+id/button6"
-        android:onClick="onVolumePlClick"
-        android:layout_toRightOf="@+id/button3" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/VolMn"
-        android:id="@+id/button6"
-        android:layout_alignTop="@+id/button4"
-        android:layout_alignRight="@+id/button5"
-        android:layout_alignEnd="@+id/button5"
-        android:onClick="onVolumeMnClick" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/one"
-        android:id="@+id/button7"
-        android:onClick="on1Click"
-        android:layout_alignTop="@+id/button"
-        android:layout_toRightOf="@+id/button6" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/two"
-        android:id="@+id/button8"
-        android:onClick="on2Click"
-        android:layout_alignTop="@+id/button7"
-        android:layout_toRightOf="@+id/button7" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tree"
-        android:id="@+id/button9"
-        android:onClick="on3Click"
-        android:layout_above="@+id/button12"
-        android:layout_alignLeft="@+id/button12"
-        android:layout_alignStart="@+id/button12" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/four"
-        android:id="@+id/button10"
-        android:onClick="on4Click"
-        android:layout_below="@+id/button7"
-        android:layout_alignLeft="@+id/button7"
-        android:layout_alignStart="@+id/button7" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/five"
-        android:id="@+id/button11"
-        android:onClick="on5Click"
-        android:layout_above="@+id/button6"
-        android:layout_toRightOf="@+id/button10" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/six"
-        android:id="@+id/button12"
-        android:onClick="on6Click"
-        android:layout_above="@+id/button6"
-        android:layout_toRightOf="@+id/button11" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/seven"
-        android:id="@+id/button13"
-        android:onClick="on7Click"
-        android:layout_alignTop="@+id/button6"
-        android:layout_toRightOf="@+id/button6" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/eight"
-        android:id="@+id/button14"
-        android:onClick="on8Click"
-        android:layout_alignTop="@+id/button13"
-        android:layout_toRightOf="@+id/button13" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nine"
-        android:id="@+id/button15"
-        android:onClick="on9Click"
-        android:layout_alignTop="@+id/button14"
-        android:layout_toRightOf="@+id/button14" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/zero"
-        android:id="@+id/button16"
-        android:onClick="on0Click"
-        android:layout_below="@+id/button14"
-        android:layout_toLeftOf="@+id/button15" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Up"
-        android:id="@+id/button17"
-        android:onClick="onUpClick"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/button21"
-        android:layout_above="@+id/button19"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="15dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button18"
-        android:text="@string/Down"
-        android:onClick="onDownClick"
-        android:layout_alignBottom="@+id/button23"
-        android:layout_alignLeft="@+id/button19"
-        android:layout_alignStart="@+id/button19"
-        android:layout_alignRight="@+id/button20"
-        android:layout_alignEnd="@+id/button20"
-        android:textSize="15dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Enter"
-        android:id="@+id/button19"
-        android:onClick="onEnterClick"
-        android:layout_above="@+id/button18"
-        android:layout_toLeftOf="@+id/button20"
-        android:textSize="15dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Right"
-        android:id="@+id/button20"
-        android:onClick="onRightClick"
-        android:layout_above="@+id/button18"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:textSize="15dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Left"
-        android:id="@+id/button21"
-        android:onClick="onLeftClick"
-        android:layout_alignTop="@+id/button12"
-        android:layout_toRightOf="@+id/button12"
-        android:layout_toLeftOf="@+id/button18"
-        android:textSize="15dp" />
-
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
+        android:layout_toRightOf="@+id/button2"
+        android:layout_alignTop="@+id/button2"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/button6"
-        android:layout_alignRight="@+id/button18"
-        android:layout_alignEnd="@+id/button18"
-        android:layout_alignTop="@+id/button2" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:text="@string/Write_signal"
         android:id="@+id/button2"
+        android:onClick="onWrtClick"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onWrtClick"
-        android:layout_alignRight="@+id/button5"
-        android:layout_alignEnd="@+id/button5"
-        android:layout_below="@+id/button16" />
+        android:layout_alignParentStart="true" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/mute"
-        android:id="@+id/button22"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/button9"
-        android:onClick="onMuteClick"
-        android:layout_toLeftOf="@+id/button17" />
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/spinner"
+        android:id="@+id/relativeLayout"
+        android:visibility="visible">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pwr_btn"
+            android:id="@+id/button"
+            android:longClickable="false"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignRight="@+id/button5"
+            android:layout_alignEnd="@+id/button5"
+            android:onClick="onPowerClick" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/input"
-        android:id="@+id/button23"
-        android:layout_below="@+id/button12"
-        android:layout_toRightOf="@+id/button12"
-        android:layout_toLeftOf="@+id/button18"
-        android:onClick="onInputClick" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/home"
-        android:id="@+id/button24"
-        android:onClick="onHomeClick"
-        android:layout_below="@+id/button18"
-        android:layout_alignRight="@+id/spinner"
-        android:layout_alignEnd="@+id/spinner"
-        android:layout_above="@+id/button2"
-        android:layout_alignLeft="@+id/button18"
-        android:layout_alignStart="@+id/button18" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ChanelPl"
+            android:id="@+id/button3"
+            android:layout_below="@+id/button"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:onClick="onChanelPlClick" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ChanelMn"
+            android:id="@+id/button4"
+            android:layout_below="@+id/button3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignRight="@+id/button3"
+            android:layout_alignEnd="@+id/button3"
+            android:onClick="onChanelMnSonClick" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/VolPl"
+            android:id="@+id/button5"
+            android:layout_above="@+id/button6"
+            android:onClick="onVolumePlClick"
+            android:layout_toRightOf="@+id/button3" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/VolMn"
+            android:id="@+id/button6"
+            android:layout_alignTop="@+id/button4"
+            android:layout_alignRight="@+id/button5"
+            android:layout_alignEnd="@+id/button5"
+            android:onClick="onVolumeMnClick" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/one"
+            android:id="@+id/button7"
+            android:onClick="on1Click"
+            android:layout_alignTop="@+id/button"
+            android:layout_toRightOf="@+id/button6" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/two"
+            android:id="@+id/button8"
+            android:onClick="on2Click"
+            android:layout_alignTop="@+id/button7"
+            android:layout_toRightOf="@+id/button7" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tree"
+            android:id="@+id/button9"
+            android:onClick="on3Click"
+            android:layout_above="@+id/button12"
+            android:layout_alignLeft="@+id/button12"
+            android:layout_alignStart="@+id/button12" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/four"
+            android:id="@+id/button10"
+            android:onClick="on4Click"
+            android:layout_below="@+id/button7"
+            android:layout_alignLeft="@+id/button7"
+            android:layout_alignStart="@+id/button7" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/five"
+            android:id="@+id/button11"
+            android:onClick="on5Click"
+            android:layout_above="@+id/button6"
+            android:layout_toRightOf="@+id/button10" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/six"
+            android:id="@+id/button12"
+            android:onClick="on6Click"
+            android:layout_above="@+id/button6"
+            android:layout_toRightOf="@+id/button11" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/seven"
+            android:id="@+id/button13"
+            android:onClick="on7Click"
+            android:layout_alignTop="@+id/button6"
+            android:layout_toRightOf="@+id/button6" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/eight"
+            android:id="@+id/button14"
+            android:onClick="on8Click"
+            android:layout_alignTop="@+id/button13"
+            android:layout_toRightOf="@+id/button13" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/nine"
+            android:id="@+id/button15"
+            android:onClick="on9Click"
+            android:layout_alignTop="@+id/button14"
+            android:layout_toRightOf="@+id/button14" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/zero"
+            android:id="@+id/button16"
+            android:onClick="on0Click"
+            android:layout_below="@+id/button14"
+            android:layout_toLeftOf="@+id/button15" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Up"
+            android:id="@+id/button17"
+            android:onClick="onUpClick"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button21"
+            android:layout_above="@+id/button19"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button18"
+            android:text="@string/Down"
+            android:onClick="onDownClick"
+            android:layout_alignBottom="@+id/button23"
+            android:layout_alignLeft="@+id/button19"
+            android:layout_alignStart="@+id/button19"
+            android:layout_alignRight="@+id/button20"
+            android:layout_alignEnd="@+id/button20"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Enter"
+            android:id="@+id/button19"
+            android:onClick="onEnterClick"
+            android:layout_above="@+id/button18"
+            android:layout_toLeftOf="@+id/button20"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Right"
+            android:id="@+id/button20"
+            android:onClick="onRightClick"
+            android:layout_above="@+id/button18"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Left"
+            android:id="@+id/button21"
+            android:onClick="onLeftClick"
+            android:layout_alignTop="@+id/button12"
+            android:layout_toRightOf="@+id/button12"
+            android:layout_toLeftOf="@+id/button18"
+            android:textSize="15dp" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mute"
+            android:id="@+id/button22"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button9"
+            android:onClick="onMuteClick"
+            android:layout_toLeftOf="@+id/button17" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/input"
+            android:id="@+id/button23"
+            android:layout_below="@+id/button12"
+            android:layout_toRightOf="@+id/button12"
+            android:layout_toLeftOf="@+id/button18"
+            android:onClick="onInputClick" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/home"
+            android:id="@+id/button24"
+            android:onClick="onHomeClick"
+            android:layout_below="@+id/button18"
+            android:layout_toRightOf="@+id/button23"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
