--- a/ir/src/main/res/layout/settings_ir.xml
+++ b/ir/src/main/res/layout/settings_ir.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <TextView android:textAppearance="?android:textAppearanceSmall"
+<RelativeLayout
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <TextView
+        android:textAppearance="?android:textAppearanceSmall"
         android:id="@id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,6 +34,7 @@
         android:layout_alignRight="@id/textView2"
         android:layout_alignBottom="@id/editText"
         android:layout_alignEnd="@id/textView2" />
+
     <Button
         android:id="@id/button"
         android:layout_width="wrap_content"
@@ -36,7 +45,9 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/textView" />
-    <EditText android:id="@id/editText"
+
+    <EditText
+        android:id="@id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@id/editText2"
@@ -44,6 +55,7 @@
         android:layout_alignStart="@id/editText2"
         android:layout_below="@id/editText2"
         android:layout_toLeftOf="@id/button" />
+
     <EditText
         android:id="@id/editText2"
         android:layout_width="wrap_content"
