--- a/res/layout/add_device_menu.xml
+++ b/res/layout/add_device_menu.xml
@@ -11,28 +11,6 @@
         android:layout_height="wrap_content"
         android:text="@string/add_brnd" />
 
-    <TextView
-        android:textAppearance="?android:textAppearanceLarge"
-        android:id="@id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/brand"
-        android:layout_below="@id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@id/textView"
-        android:layout_alignEnd="@id/textView" />
-
-    <TextView
-        android:textAppearance="?android:textAppearanceLarge"
-        android:id="@id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/item"
-        android:layout_below="@id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:id="@id/button"
         android:layout_width="106dp"
@@ -40,7 +18,7 @@
         android:text="@string/add"
         android:onClick="onAddDeviceClick"
         android:textSize="15dp"
-        android:layout_below="@id/editText"
+        android:layout_alignTop="@id/editText2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -52,16 +30,17 @@
         android:inputType="text"
         android:layout_alignStart="@id/editText2"
         android:layout_below="@id/editText2"
-        android:layout_alignRight="@id/editText2"
-        android:layout_alignEnd="@id/editText2" />
+        android:hint="@string/item"
+        android:layout_toLeftOf="@id/button" />
 
     <EditText
         android:id="@id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:layout_toRightOf="@id/textView3"
+        android:hint="@string/brand"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/textView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toLeftOf="@id/button" />
 </RelativeLayout>
