--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,7 +1,15 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Holo">
+    <style name="Holo" parent="android:Theme.Holo">
+        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Holo_Light_DarkActionBar" parent="android:Theme.Holo.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
+
+    <style name="Theme_Holo_Light" parent="android:Theme.Holo.Light">
         <!-- Customize your theme here. -->
     </style>
 
