--- a/res/layout-xlarge/wrt_mode.xml
+++ b/res/layout-xlarge/wrt_mode.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1"
     android:gravity="center">
@@ -24,7 +25,7 @@
         android:layout_width="164dp"
         android:layout_height="169dp"
         android:id="@+id/imageView"
-        android:background="@drawable/img_learning"
+        android:background="@drawable/img_learning2"
         android:contentDescription=""
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
