--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item type="id" name="button">false</item>
-    <item type="id" name="button5">false</item>
-    <item type="id" name="button3">false</item>
-    <item type="id" name="button4">false</item>
-    <item type="id" name="button6">false</item>
-    <item type="id" name="button7">false</item>
-    <item type="id" name="button8">false</item>
-    <item type="id" name="button9">false</item>
-    <item type="id" name="button12">false</item>
-    <item type="id" name="button10">false</item>
-    <item type="id" name="button11">false</item>
-    <item type="id" name="button13">false</item>
-    <item type="id" name="button14">false</item>
-    <item type="id" name="button15">false</item>
-    <item type="id" name="button16">false</item>
-    <item type="id" name="button17">false</item>
-    <item type="id" name="button21">false</item>
-    <item type="id" name="button18">false</item>
-    <item type="id" name="button19">false</item>
-    <item type="id" name="button20">false</item>
-    <item type="id" name="spinner">false</item>
-    <item type="id" name="spinner2">false</item>
-    <item type="id" name="button2">false</item>
-    <item type="id" name="textView">false</item>
-    <item type="id" name="textView2">false</item>
-    <item type="id" name="textView3">false</item>
-    <item type="id" name="editText">false</item>
-    <item type="id" name="editText2">false</item>
-    <item type="id" name="action_settings">false</item>
-    <item type="id" name="action_about">false</item>
+    <item name="button" type="id">false</item>
+    <item name="button5" type="id">false</item>
+    <item name="button3" type="id">false</item>
+    <item name="button4" type="id">false</item>
+    <item name="button6" type="id">false</item>
+    <item name="button7" type="id">false</item>
+    <item name="button8" type="id">false</item>
+    <item name="button9" type="id">false</item>
+    <item name="button12" type="id">false</item>
+    <item name="button10" type="id">false</item>
+    <item name="button11" type="id">false</item>
+    <item name="button13" type="id">false</item>
+    <item name="button14" type="id">false</item>
+    <item name="button15" type="id">false</item>
+    <item name="button16" type="id">false</item>
+    <item name="button17" type="id">false</item>
+    <item name="button21" type="id">false</item>
+    <item name="button18" type="id">false</item>
+    <item name="button19" type="id">false</item>
+    <item name="button20" type="id">false</item>
+    <item name="spinner" type="id">false</item>
+    <item name="spinner2" type="id">false</item>
+    <item name="button2" type="id">false</item>
+    <item name="textView" type="id">false</item>
+    <item name="textView2" type="id">false</item>
+    <item name="textView3" type="id">false</item>
+    <item name="editText" type="id">false</item>
+    <item name="editText2" type="id">false</item>
+    <item name="action_settings" type="id">false</item>
+    <item name="action_about" type="id">false</item>
 </resources>
