--- a/res/layout-xlarge/wrt_mode.xml
+++ b/res/layout-xlarge/wrt_mode.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="231dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
-        android:id="@+id/textView"
-        android:gravity="center"
-        android:layout_gravity="right"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         android:layout_alignBottom="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_gravity="right"
+        android:layout_toRightOf="@+id/imageView"
+        android:gravity="center"
+        android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="164dp"
         android:layout_height="169dp"
-        android:id="@+id/imageView"
-        android:background="@drawable/img_learning2"
-        android:contentDescription=""
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/img_learning2"
+        android:contentDescription="" />
 </RelativeLayout>
