--- a/res/layout/sbmt_device_menu.xml
+++ b/res/layout/sbmt_device_menu.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent">
 
     <Spinner
+        android:id="@+id/spinner"
         android:layout_width="1110dp"
         android:layout_height="65dp"
-        android:id="@+id/spinner"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
