--- a/res/layout/wrt_mode.xml
+++ b/res/layout/wrt_mode.xml
@@ -17,6 +17,7 @@
         android:layout_alignTop="@+id/imageView"
         android:layout_gravity="right"
         android:layout_toRightOf="@+id/imageView"
+        android:contentDescription=""
         android:gravity="center"
         android:text="@string/irremote_dialog_learning_sig_desc_closer_txt"
         android:textAppearance="?android:attr/textAppearanceSmall" />
@@ -28,5 +29,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:background="@drawable/img_learning" />
+        android:background="@drawable/img_learning"
+        android:contentDescription="" />
 </RelativeLayout>
